---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 10
      column: 13
    end_location:
      row: 10
      column: 23
    fix:
      content: "..."
      location:
        row: 10
        column: 13
      end_location:
        row: 10
        column: 23
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 16
      column: 8
    end_location:
      row: 20
      column: 5
    fix:
      content: "..."
      location:
        row: 16
        column: 8
      end_location:
        row: 20
        column: 5
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 25
      column: 8
    end_location:
      row: 29
      column: 5
    fix:
      content: "..."
      location:
        row: 25
        column: 8
      end_location:
        row: 29
        column: 5
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 34
      column: 8
    end_location:
      row: 38
      column: 5
    fix:
      content: "..."
      location:
        row: 34
        column: 8
      end_location:
        row: 38
        column: 5
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 43
      column: 8
    end_location:
      row: 45
      column: 5
    fix:
      content: "..."
      location:
        row: 43
        column: 8
      end_location:
        row: 45
        column: 5
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 48
      column: 13
    end_location:
      row: 49
      column: 11
    fix:
      content: "..."
      location:
        row: 48
        column: 13
      end_location:
        row: 49
        column: 11
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 52
      column: 13
    end_location:
      row: 53
      column: 12
    fix:
      content: "..."
      location:
        row: 52
        column: 13
      end_location:
        row: 53
        column: 12
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 56
      column: 16
    end_location:
      row: 57
      column: 7
    fix:
      content: "..."
      location:
        row: 56
        column: 16
      end_location:
        row: 57
        column: 7
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 60
      column: 13
    end_location:
      row: 61
      column: 7
    fix:
      content: "..."
      location:
        row: 60
        column: 13
      end_location:
        row: 61
        column: 7
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 64
      column: 17
    end_location:
      row: 65
      column: 8
    fix:
      content: "..."
      location:
        row: 64
        column: 17
      end_location:
        row: 65
        column: 8
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 68
      column: 17
    end_location:
      row: 69
      column: 10
    fix:
      content: "..."
      location:
        row: 68
        column: 17
      end_location:
        row: 69
        column: 10
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 96
      column: 15
    end_location:
      row: 96
      column: 18
    fix:
      content: "..."
      location:
        row: 96
        column: 15
      end_location:
        row: 96
        column: 18
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 99
      column: 15
    end_location:
      row: 99
      column: 21
    fix:
      content: "..."
      location:
        row: 99
        column: 15
      end_location:
        row: 99
        column: 21
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 105
      column: 15
    end_location:
      row: 105
      column: 24
    fix:
      content: "..."
      location:
        row: 105
        column: 15
      end_location:
        row: 105
        column: 24
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 108
      column: 17
    end_location:
      row: 109
      column: 8
    fix:
      content: "..."
      location:
        row: 108
        column: 17
      end_location:
        row: 109
        column: 8
    parent: ~
  - kind:
      name: TypedArgumentDefaultInStub
      body: Only simple default values allowed for typed arguments
      suggestion: "Replace default value by `...`"
      fixable: true
    location:
      row: 115
      column: 16
    end_location:
      row: 115
      column: 23
    fix:
      content: "..."
      location:
        row: 115
        column: 16
      end_location:
        row: 115
        column: 23
    parent: ~

